--- a/config.js.example
+++ b/config.js.example
@@ -1,14 +1,26 @@
 module.exports = {
     ignorePackets: [
         "PRESENCE_UPDATE",
+        "PRECENCES_REPLACE",
         "TYPING_START"
     ],
-    rabbitUrl: "amqp://127.0.0.1",
-    rabbitExchange: "gateway",
-    rabbitChannel: "stable",
+    rabbit: {
+        url: "amqp://127.0.0.1",
+        pusher: {
+            exchangeName: "gateway",
+            channelName: "gateway"
+        },
+        commands: {
+            exchangeName: "gateway-command",
+            channelName: "gateway.{id}"
+        }
+    },
+    redis: {
+        url: "redis://localhost:6379"
+    },
     shardIndex: 0, 
     shardInit: 1,
     shardCount: 1,
-    token: "token-here",
-    logLevel: 2, /* 0 = none, 1 = info, 2 = verbose */
+    token: "",
+    logLevel: 1,
 };
