--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@spectacles/gateway": "^0.11.0",
     "amqplib": "^0.5.2",
+    "bluebird": "^3.5.3",
     "redis": "^2.8.0"
   }
 }
