--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "homepage": "https://github.com/Mikibot/sharder",
   "dependencies": {
-    "@spectacles/gateway": "^0.11.0",
+    "@spectacles/gateway": "^0.12.0",
+    "@spectacles/types": "^0.2.0",
     "amqplib": "^0.5.2",
     "bluebird": "^3.5.3",
     "redis": "^2.8.0"
